naad links corrected spacing improved out team UI changes

--- a/events.css
+++ b/events.css
@@ -14,16 +14,23 @@
   grid-auto-flow: column;
   margin-bottom: 100px;
 }
+
+
 .card {
   border-radius: 12px 12px 12px 12px;
   width: 20vw;
   background-color: #fbebc3;
+  opacity: 0.85;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 }
 .card-body {
   background-color: #e9e9e9;
+  /* background-color: transparent; */
 }
 .card-img-top {
   border-radius: 20px;
+  opacity: 0.7;
 }
 
 .card:hover {
